[package]

name = "nntp"
version = "0.0.6"
edition = "2024"
authors = ["Rafael Passos <auyer@rcpassos.me>"]
repository = "https://github.com/auyer/rust-nntp"
description = "NNTP client for Rust"
license = "GPL-V3"
readme = "README.md"

[lib]
name = "nntp"
path = "src/nntp.rs"

[[bin]]
name = "example"
path = "example.rs"

[dependencies]
encoding_rs = "0.8.35"
